Made it compatible with Java 17 and added support for Windows and MacOS. Also optimized more paths